# checker

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  run_app.sh
docker/: cron-refresh.sh  entrypoint.sh
src/: app.py  app.py.bak  aws_costs_client.py  collector.py  db_artifact.py  duckdb_client.py  pod_collector.py  runtime_config.py  utils.py
src/app/: app.py  page_shared.py
src/app/layout/: __init__.py  css.py  ui.py
src/app/pages/costs/: css.py  logic.py  ui.py
src/app/pages/pod/: css.py  logic.py  ui.py
